...
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                tools:text="Venta" />

            <!-- Favorite touch target: 48dp x 48dp -->
            <FrameLayout
                android:id="@+id/favTarget"
                android:layout_width="@dimen/touch_target_size"
                android:layout_height="@dimen/touch_target_size"
                android:layout_gravity="top|end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
...
